### 更新日志 1.完成基本控件的展示

--- a/BaseProject/Podfile
+++ b/BaseProject/Podfile
@@ -10,6 +10,8 @@ target 'BaseProject' do
   # Pods for BaseProject
 
 
+#### 常用的三方库
+
 pod 'AFNetworking'          # 网络库
 pod 'SDWebImage'            # 图片加载库
 pod 'Masonry'               # 约束布局库
@@ -23,21 +25,31 @@ pod 'YYModel'               # YYKit json转模型库
 #pod 'YYCache'               # 缓存框架
 
 pod 'IQKeyboardManager'     # 键盘弹出管理控件
-
 #pod 'IDMPhotoBrowser'               # 图片浏览器（可触摸关闭）
-#pod 'WebViewJavascriptBridge'       # js交互框架
+
+
+pod 'WebViewJavascriptBridge'       # js交互框架
 #pod 'SAMKeychain'                   # 钥匙串访问工具
-#pod 'CocoaAsyncSocket'              # socket
-#pod 'SocketRocket'                  # websocket
+
+pod 'CocoaAsyncSocket'              # gcdSocket
+pod 'SocketRocket'                  # webSocket
 
 #pod 'MJRefresh'
 #pod 'FMDB'
-#pod 'SAMKeychain'
-#pod 'WZLBadge'  # 添加小红点工具
+#pod 'WZLBadge'                     # 添加小红点工具
 
-#pod 'DACircularProgress'   # 一个圆圈状的进度显示view
-#pod 'ReactiveCocoa', '2.3.1'   # RAC 响应式编程库
-#pod 'TZImagePickerController'  # 照片选择控件
+#pod 'DACircularProgress'           # 一个圆圈状的进度显示view
+#pod 'ReactiveCocoa', '2.3.1'       # RAC 响应式编程库
+#pod 'TZImagePickerController'      # 照片选择控件
+
+#### 异常监测/版本分发
+
+#pod 'Bugly'                         # 腾讯异常监测工具
+#pod 'Pgyer'                         # 蒲公英sdk
+#pod 'PgyUpdate'                     # 蒲公英更新提示sdk
+
+#pod 'FSCalendar'                    # 日历视图控件
+#pod 'SGQRCode'                      # 二维码扫描
 
 
   target 'BaseProjectTests' do
